#/********************************************************************
# liblivemedia/pyproject.toml
#
# Copyright (c) 2024 Stephen Rhodes 
#
# This library is free software; you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by the
# Free Software Foundation; either version 3 of the License, or (at your
# option) any later version. (See <http://www.gnu.org/copyleft/lesser.html>.)
#
# This library is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
# more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this library; if not, write to the Free Software Foundation, Inc.,
# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA
#
#******************************************************************************/

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "liblivemedia"
version = "1.0.2"
authors = [
    { name="Stephen Rhodes", email="sr99622@gmail.com" },
]
description = "A python module based on live555, version 2024.06.26"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sr99622/liblivemedia"
"Bug Tracker" = "https://github.com/sr99622/liblivemedia/issues"